--- a/api_to_excel.yml
+++ b/api_to_excel.yml
@@ -1,7 +1,8 @@
 ---
 - name: Query OMDb API and create Excel file
   hosts: ditra
-  gather_facts: no
+  gather_facts: false
+  any_errors_fatal: false
   vars_files:
     - vars/secrets.yml
   vars:
@@ -9,78 +10,166 @@
     output_file: "movies_results.xlsx"
     api_success: false
     excel_success: false
+    host_reachable: false
+    log_file: "ansible_api_excel.log"
+    timestamp: "{{ ansible_date_time.iso8601 if ansible_date_time is defined else lookup('pipe', 'date +%Y-%m-%dT%H:%M:%SZ') }}"
 
   tasks:
+    - name: Test host connectivity
+      ansible.builtin.wait_for_connection:
+        timeout: 10
+      register: connection_test
+      ignore_unreachable: true
+      ignore_errors: true
+
+    - name: Set host reachable status
+      ansible.builtin.set_fact:
+        host_reachable: "{{ connection_test is succeeded }}"
+
+    - name: Log host unreachable event
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][ERROR] - host_unreachable : host={{ inventory_hostname }} Connection timeout after 10 seconds
+        create: true
+        mode: "0644"
+      delegate_to: localhost
+      when: not host_reachable
+
+    - name: Display host unreachable message
+      ansible.builtin.debug:
+        msg: >-
+          [{{ timestamp }}][ERROR] - host_unreachable : host={{ inventory_hostname }} Connection timeout after 10 seconds
+      when: not host_reachable
+
+    - name: End play for unreachable hosts
+      ansible.builtin.meta: end_host
+      when: not host_reachable
+
+    - name: Gather system facts
+      ansible.builtin.setup:
+      ignore_unreachable: true
+      failed_when: false
+
+    - name: Log connectivity success
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][INFO] - host_reachable : host={{ inventory_hostname }} Host is online and accessible
+        create: true
+        mode: "0644"
+      delegate_to: localhost
+
     - name: Query OMDb API for movies
-      uri:
+      ansible.builtin.uri:
         url: "http://www.omdbapi.com/?apikey={{ omdb_api_key }}&s={{ search_term }}"
         method: GET
-        return_content: yes
+        return_content: true
         status_code: 200
         timeout: 10
       register: api_response
-      ignore_errors: yes
+      retries: 3
+      delay: 2
+      until: api_response.status is defined and api_response.status == 200
+      failed_when: false
 
     - name: Check if API call was successful
-      set_fact:
+      ansible.builtin.set_fact:
         api_success: "{{ api_response.status == 200 and api_response.json.Response == 'True' }}"
       when: api_response is defined and api_response.status is defined
 
-    - name: Display API error if call failed
-      debug:
-        msg: "API call failed: {{ api_response.msg | default('Unknown error') }}"
+    - name: Log API call failure
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][ERROR] - api_call_failed : host={{ inventory_hostname }}
+          search_term={{ search_term }} error={{ api_response.msg | default('Unknown error') }}
+        create: true
+        mode: "0644"
+      delegate_to: localhost
       when: not api_success
 
-    - name: Display API response error
-      debug:
-        msg: "API returned error: {{ api_response.json.Error }}"
+    - name: Display API error if call failed
+      ansible.builtin.debug:
+        msg: >-
+          [{{ timestamp }}][ERROR] - api_call_failed : host={{ inventory_hostname }}
+          search_term={{ search_term }} error={{ api_response.msg | default('Unknown error') }}
+      when: not api_success
+
+    - name: Log API response error
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][ERROR] - api_no_results : host={{ inventory_hostname }} search_term={{ search_term }} api_error={{ api_response.json.Error }}
+        create: true
+        mode: "0644"
+      delegate_to: localhost
       when: api_response is defined and api_response.json is defined and api_response.json.Response == 'False'
 
+    - name: Display API response error
+      ansible.builtin.debug:
+        msg: >-
+          [{{ timestamp }}][ERROR] - api_no_results : host={{ inventory_hostname }} search_term={{ search_term }} api_error={{ api_response.json.Error }}
+      when: api_response is defined and api_response.json is defined and api_response.json.Response == 'False'
+
+    - name: Log API call success
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][INFO] - api_call_success : host={{ inventory_hostname }}
+          search_term={{ search_term }} results_count={{ api_response.json.Search | length }}
+        create: true
+        mode: "0644"
+      delegate_to: localhost
+      when: api_success
+
     - name: Copy Python script for Excel generation
-      copy:
+      ansible.builtin.copy:
         src: create_excel.py
         dest: "/tmp/create_excel.py"
-        mode: '0755'
+        mode: "0755"
       when: api_success
 
     - name: Save API response to temporary file
-      copy:
+      ansible.builtin.copy:
         content: "{{ api_response.json | to_json }}"
         dest: "/tmp/api_data.json"
+        mode: "0644"
       when: api_success
 
     - name: Install openpyxl via apt (Debian/Ubuntu)
-      apt:
+      ansible.builtin.apt:
         name: python3-openpyxl
         state: present
-        update_cache: no
-      become: yes
+        update_cache: false
+      become: true
       when: api_success
-      ignore_errors: yes
+      failed_when: false
       register: apt_install
 
     - name: Install openpyxl via pip if apt failed
-      pip:
+      ansible.builtin.pip:
         name: openpyxl
         state: present
-        break_system_packages: yes
+        break_system_packages: true
       when: api_success and (apt_install is failed or apt_install is skipped)
-      ignore_errors: yes
+      failed_when: false
 
     - name: Create Excel file from API data
-      command: python3 /tmp/create_excel.py /tmp/api_data.json {{ output_file }}
+      ansible.builtin.command: python3 /tmp/create_excel.py /tmp/api_data.json {{ output_file }}
       register: excel_result
       when: api_success
-      ignore_errors: yes
+      failed_when: false
+      changed_when: excel_result.rc == 0
 
     - name: Parse Excel creation result
-      set_fact:
+      ansible.builtin.set_fact:
         excel_success: "{{ (excel_result.rc | default(1)) == 0 }}"
         excel_output: "{{ excel_result.stdout | default('{}') | from_json if (excel_result.stdout | default('') | length > 0) else {} }}"
       when: api_success and excel_result is defined
 
     - name: Clean up temporary files
-      file:
+      ansible.builtin.file:
         path: "{{ item }}"
         state: absent
       loop:
@@ -88,48 +177,69 @@
         - "/tmp/api_data.json"
       when: api_success
 
-    - name: Display final success message
-      debug:
-        msg:
-          - "================================"
-          - "EXECUTION SUCCESSFUL"
-          - "================================"
-          - "API Query: SUCCESS"
-          - "Excel Creation: SUCCESS"
-          - "File saved: {{ output_file }}"
-          - "Movies found: {{ api_response.json.Search | length }}"
-          - "================================"
+    - name: Log Excel creation success
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][INFO] - excel_created : host={{ inventory_hostname }}
+          output_file={{ output_file }} movies_count={{ api_response.json.Search | length }}
+        create: true
+        mode: "0644"
+      delegate_to: localhost
       when: api_success and excel_success
 
-    - name: Display Excel creation failure message
-      debug:
-        msg:
-          - "================================"
-          - "EXECUTION FAILED"
-          - "================================"
-          - "API Query: SUCCESS"
-          - "Excel Creation: FAILED"
-          - "Error: {{ excel_output.message | default('Unknown error creating Excel file') }}"
-          - "================================"
+    - name: Display final success message
+      ansible.builtin.debug:
+        msg: >-
+          [{{ timestamp }}][INFO] - execution_complete : host={{ inventory_hostname }}
+          output_file={{ output_file }} movies_count={{ api_response.json.Search | length }}
+      when: api_success and excel_success
+
+    - name: Log Excel creation failure
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][ERROR] - excel_creation_failed : host={{ inventory_hostname }}
+          error={{ excel_output.message | default('Unknown error creating Excel file') }}
+        create: true
+        mode: "0644"
+      delegate_to: localhost
       when: api_success and not excel_success
 
+    - name: Display Excel creation failure message
+      ansible.builtin.debug:
+        msg: >-
+          [{{ timestamp }}][ERROR] - excel_creation_failed : host={{ inventory_hostname }}
+          error={{ excel_output.message | default('Unknown error creating Excel file') }}
+      when: api_success and not excel_success
+
+    - name: Log API query failure
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][ERROR] - api_query_failed : host={{ inventory_hostname }} Unable to connect to API or invalid response
+        create: true
+        mode: "0644"
+      delegate_to: localhost
+      when: not api_success
+
     - name: Display API failure message
-      debug:
-        msg:
-          - "================================"
-          - "EXECUTION FAILED"
-          - "================================"
-          - "API Query: FAILED"
-          - "Error: Unable to connect to API or invalid response"
-          - "Please check your API key and internet connection"
-          - "================================"
+      ansible.builtin.debug:
+        msg: >-
+          [{{ timestamp }}][ERROR] - api_query_failed : host={{ inventory_hostname }} Unable to connect to API or invalid response
       when: not api_success
 
     - name: Set final status
-      set_fact:
+      ansible.builtin.set_fact:
         final_status: "{{ 'SUCCESS' if (api_success and excel_success) else 'FAILED' }}"
 
-    - name: Fail playbook if any step failed
-      fail:
-        msg: "Playbook execution failed. Check the messages above for details."
-      when: not (api_success and excel_success)
+    - name: Log final execution status
+      ansible.builtin.lineinfile:
+        path: "{{ log_file }}"
+        line: >-
+          [{{ timestamp }}][{{ 'INFO' if final_status == 'SUCCESS' else 'ERROR' }}]
+          - execution_{{ final_status | lower }} : host={{ inventory_hostname }}
+          Final execution status={{ final_status }}
+        create: true
+        mode: "0644"
+      delegate_to: localhost
